<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="@dimen/touch_target_min"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/spacing_sm"
    android:paddingVertical="@dimen/spacing_xs">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonTint="@color/colorPrimary" />

    <TextView
        android:id="@+id/txt_circle_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.Bailiwick.Body1" />
</LinearLayout>
